--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
@@ -84,5 +84,5 @@ theme: apollo
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:otherid/otherid.github.io.git
+  repository: git@github.com:Cacivy/Hexo.git
   brandch: master
