--- a/_config.yml
+++ b/_config.yml
@@ -84,5 +84,5 @@ theme: apollo
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:Cacivy/Hexo.git
+  repository: git@github.com:Cacivy/Cacivy.github.io.git
   brandch: master
