--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ since: 2016
 
 # Social links
 social:
-  github: https://github.com/otherid
+  github: https://github.com/cacivy
   twitter: https://twitter.com/Cacivy
   weibo: http://weibo.com/Cacivy
   douban: http://www.douban.com/people/67769411
