--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,12 @@ pagination_dir: page
 ## Themes: http://hexo.io/themes/
 theme: apollo
 
+archive_generator:
+    per_page: 0
+    yearly: false
+    monthly: false
+    daily: false
+
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
