--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "hexo": {
     "version": "3.3.8"
   },
+  "scripts": {
+    "build": "hexo g",
+    "server": "hexo s -g",
+    "deploy": "hexo d"
+  },
   "dependencies": {
     "hexo": "^3.2.2",
     "hexo-browsersync": "^0.2.0",
