update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ node_js:
 cache:
   directories:
     - node_modules
+before_script:
+  - git config --global user.name 'cacivy'
+  - git config --global user.email '609448234@qq.com'
+  - sed -i'' "s~//github.com/Cacivy/cacivy.github.io.git~//${GH_TOKEN}:x-oauth-basic@github.com/Cacivy/cacivy.github.io.git~" _config.yml
 install:
   - yarn
 script:
