feat: Replace npm with yarn

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
     GH_TOKEN:
       from_secret: GH_TOKEN
   commands:
-  - npm install
+  - yarn
   - git config --global user.email "609448234@qq.com"
   - git config --global user.name "cacivy"
   - sed -i'' "s~//github.com/Cacivy/cacivy.github.io.git~//${GH_TOKEN}:x-oauth-basic@github.com/Cacivy/cacivy.github.io.git~" _config.yml
