--- a/.drone.yml
+++ b/.drone.yml
@@ -13,8 +13,8 @@ steps:
   - git config --global user.name "cacivy"
   - sed -i'' "s~//github.com/Cacivy/cacivy.github.io.git~//${GH_TOKEN}:x-oauth-basic@github.com/Cacivy/cacivy.github.io.git~" _config.yml
   - yarn
-  - hexo g
-  - hexo d
+  - yarn build
+  - yarn deploy
 
 trigger:
   branch:
